# act-openvino-cpp

./: .gitignore  Dockerfile  README.md  benchmark.sh  convert_to_openvino.sh  export_model.sh
cpp/: CMakeLists.txt
cpp/include/: act_inference.h
cpp/src/: act_inference.cpp  benchmark_cpu_gpu.cpp  main.cpp
scripts/: act_model_standalone.py  convert_onnx_to_openvino.py  export_standalone.py
